--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="string_now_jp">今何時ですか</string>
     <string name="en">English</string>
+    <string name="num_sets" formatted="false">Num Sets: %1$d</string>
 
     <!-- Review Summary -->
     <string name="review_summary_num_correct" formatted="false">#Corr: %1$d</string>
